Added images and prev/next links to HTML

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 	<title>jQuery Slider</title>
+	<link rel="stylesheet" type="text/css" href="css/slider.css">
 </head>
 <body>
+	<div id="slider">
+		<img src="img/image01.jpg">
+		<img src="img/image02.jpg">
+		<img src="img/image03.jpg">
+		<img src="img/image04.jpg">
+	</div>
+	
+	<a href="#">Previous</a>
+	<a href="#">Next</a>
 	
 </body>
 </html>
