Added CSS styles and wrapper in HTML

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/slider.css">
 </head>
 <body>
+
+<div class="wrapper">
 	<div id="slider">
 		<img src="img/image01.jpg">
 		<img src="img/image02.jpg">
@@ -12,8 +14,9 @@
 		<img src="img/image04.jpg">
 	</div>
 	
-	<a href="#">Previous</a>
-	<a href="#">Next</a>
-	
+	<a href="#" class="left">Previous</a>
+	<a href="#" class="right">Next</a>
+</div>
+
 </body>
 </html>
