Added jquery and slider js files

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 	<a href="#" class="right">Next</a>
 </div>
 
+<script src="js/jquery.js"></script>
+<script src="js/slider.js"></script>
+
 </body>
 </html>
