--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <div class="wrapper">
 	<div id="slider">
-		<img src="img/image01.jpg">
-		<img src="img/image02.jpg">
-		<img src="img/image03.jpg">
-		<img src="img/image04.jpg">
+		<img id="1" src="img/image01.jpg">
+		<img id="2" src="img/image02.jpg">
+		<img id="3" src="img/image03.jpg">
+		<img id="4" src="img/image04.jpg">
 	</div>
 	
 	<a href="#" class="left">Previous</a>
