--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<img id="4" src="img/image04.jpg">
 	</div>
 	
-	<a href="#" class="left">Previous</a>
-	<a href="#" class="right">Next</a>
+	<a href="#" class="left" onclick="prev();return false;">Previous</a>
+	<a href="#" class="right" onclick="next();return false;">Next</a>
 </div>
 
 <script src="js/jquery.js"></script>
